# harsh-realm

./: Cargo.toml  LICENSE.md  README.md  TODO.md  harsh-realm.code-workspace  notes.md  rules.md
desktop_ui/: Cargo.toml
desktop_ui/src/: character_stats.rs  color.rs  command.rs  dice.rs  main.rs
django-app/: Cargo.toml  manage.py  pyproject.toml  test1.toml
django-app/harsh_realm/: asgi.py  settings.py  urls.py  wsgi.py
django-app/harshrealmfe/: admin.py  apps.py  chat_message_ops.py  forms.py  models.py  urls.py  views.py
django-app/harshrealmfe/migrations/: 0001_initial.py  0002_rename_alienrace_alienracename.py  0003_mercsforhire.py  0004_starshipproblem.py  0005_rumor.py  0006_starshipname.py  0007_uselessitem.py  0008_oddsituation.py  0009_reasoncharactersaretogether.py  0010_missionhook.py  0011_session_chatmessage.py  0012_alter_chatmessage_session.py  0013_rename_session_chatsession.py  0014_rename_session_chatmessage_chat_session.py  0015_bannedcargo.py  0016_randomitem_delete_uselessitem.py
django-app/harshrealmfe/templates/: alien_race_names_list.html  banned_cargo_list.html  base.html  chat_window.html  client.html  index.html  list_alien_race_names.html  list_banned_cargo.html  list_mercs_for_hire.html  list_mission_hooks.html  list_odd_situations.html  list_random_items.html  list_reasons_characters_are_together.html  list_rumors.html  list_starship_names.html  list_starship_problems.html  mercs_for_hire_list.html  mission_hook_list.html  nav.html  odd_situations_list.html  random_items_list.html  reasons_characters_are_together_list.html  rumors_list.html  starship_names_list.html  (+1 more)
django-app/web_ui/: Cargo.toml
flask-app/: LICENSE.md  README.md  app.py  config.py  database.py  dice_roller.py  models.py  mythic_fate_chart.py  pyproject.toml  tailwind.config.js  views.py
flask-app/data/: 100_alien_race_names.csv  100_problems_to_encounter_on_a_starship.csv  100_starship_crew.csv  100_starship_names.csv  1d100_random_cybercity_locations.csv
flask-app/references/: mythic_game_master_emulator.md
flask-app/templates/: base.html  home.html  roll_dice.html  roll_fate_chart.html
web-app/: pyproject.toml  rxconfig.py
web-app/.web/: package-lock.json  reflex.json
web-app/alembic/: env.py
web-app/web_app/: character_stats.py  combat.py  command.py  dice.py  game_session.py  saving_throw.py  skill_check.py  text_line.py  text_type.py  web_app.py
web_ui_reflex/: pyproject.toml  rxconfig.py
web_ui_reflex/.web/: package-lock.json
web_ui_reflex/web_ui/: notes.md  pyproject.toml  rxconfig.py
(+75 files in other folders)
