[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["cyrex562 <cyrex562@gmail.com>"]
readme = "README.md"
packages = [{include = "web_app"}]

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
